// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dashboard /> renders correctly 1`] = `
<View
  dataSet={{}}
  style={
    {
      "flex": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    dataSet={{}}
    style={{}}
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#171717",
          "fontFamily": undefined,
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 27,
          "textDecorationLine": undefined,
        }
      }
    >
      Bienvenido de vuelta!
    </Text>
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#171717",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 21,
          "textDecorationLine": undefined,
        }
      }
    >
      Fernando Cornejo
    </Text>
  </View>
  <View
    dataSet={{}}
    style={
      {
        "marginBottom": 24,
        "marginTop": 24,
      }
    }
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#71717a",
          "fontFamily": undefined,
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 18,
          "marginBottom": 16,
          "textDecorationLine": undefined,
        }
      }
    >
      TUS PUNTOS
    </Text>
    <View
      dataSet={{}}
      style={
        {
          "backgroundColor": "#334FFA",
          "borderRadius": 16,
          "elevation": 5,
          "marginLeft": "auto",
          "marginRight": "auto",
          "paddingBottom": 48,
          "paddingTop": 48,
          "position": "relative",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 3.84,
          "width": "80%",
        }
      }
    >
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#FFFFFF",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "left": 16,
            "letterSpacing": 0,
            "lineHeight": 21,
            "position": "absolute",
            "textDecorationLine": undefined,
            "top": 16,
          }
        }
      >
        Diciembre
      </Text>
      <Text
        accessibilityLabel="points container"
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#FFFFFF",
            "fontFamily": undefined,
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 36,
            "marginLeft": "auto",
            "marginRight": "auto",
            "textDecorationLine": undefined,
          }
        }
      >
        150.00
         pts
      </Text>
    </View>
  </View>
  <View
    dataSet={{}}
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#71717a",
          "fontFamily": undefined,
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 18,
          "marginBottom": 16,
          "textDecorationLine": undefined,
        }
      }
    >
      TUS MOVIMIENTOS
    </Text>
    <View
      dataSet={{}}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "flex": 1,
          "marginBottom": 16,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <RCTScrollView
        data={
          [
            {
              "createdAt": "2022-12-09T10:20:00.909Z",
              "id": "1",
              "image": "image",
              "is_redemption": false,
              "points": 100,
              "product": "Product item 1",
            },
            {
              "createdAt": "2022-12-08T10:20:00.909Z",
              "id": "2",
              "image": "image",
              "is_redemption": true,
              "points": 50,
              "product": "Product item 2",
            },
            {
              "createdAt": "2022-12-07T10:20:00.909Z",
              "id": "3",
              "image": "image",
              "is_redemption": false,
              "points": 200,
              "product": "Product item 3",
            },
            {
              "createdAt": "2022-12-06T10:20:00.909Z",
              "id": "4",
              "image": "image",
              "is_redemption": true,
              "points": 100,
              "product": "Product item 4",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={true}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={[]}
        viewabilityConfigCallbackPairs={[]}
      >
        <View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityLabel="pressable item"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              dataSet={{}}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 6,
                        "height": 50,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <FastImageView
                    dataSet={{}}
                    defaultSource={null}
                    resizeMode="cover"
                    source={
                      {
                        "uri": "image",
                      }
                    }
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "width": 8,
                    }
                  }
                />
                <View
                  dataSet={{}}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "flex": 1.7,
                      }
                    }
                  >
                    <Text
                      dataSet={{}}
                      numberOfLines={1}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "700",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                          "width": "100%",
                        }
                      }
                    >
                      Product item 1
                    </Text>
                    <View
                      dataSet={{}}
                      style={{}}
                    />
                    <Text
                      accessibilityLabel="product date"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 10,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 15,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      09 de diciembre , 2022
                    </Text>
                  </View>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      accessibilityLabel="product points"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#16a34a",
                            "fontFamily": undefined,
                            "fontSize": 16,
                            "fontStyle": undefined,
                            "fontWeight": undefined,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        + 
                      </Text>
                      100.00
                    </Text>
                    <View
                      dataSet={{}}
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <SvgMock
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityLabel="pressable item"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              dataSet={{}}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 6,
                        "height": 50,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <FastImageView
                    dataSet={{}}
                    defaultSource={null}
                    resizeMode="cover"
                    source={
                      {
                        "uri": "image",
                      }
                    }
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "width": 8,
                    }
                  }
                />
                <View
                  dataSet={{}}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "flex": 1.7,
                      }
                    }
                  >
                    <Text
                      dataSet={{}}
                      numberOfLines={1}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "700",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                          "width": "100%",
                        }
                      }
                    >
                      Product item 2
                    </Text>
                    <View
                      dataSet={{}}
                      style={{}}
                    />
                    <Text
                      accessibilityLabel="product date"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 10,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 15,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      08 de diciembre , 2022
                    </Text>
                  </View>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      accessibilityLabel="product points"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 16,
                            "fontStyle": undefined,
                            "fontWeight": undefined,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        - 
                      </Text>
                      50.00
                    </Text>
                    <View
                      dataSet={{}}
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <SvgMock
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityLabel="pressable item"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              dataSet={{}}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 6,
                        "height": 50,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <FastImageView
                    dataSet={{}}
                    defaultSource={null}
                    resizeMode="cover"
                    source={
                      {
                        "uri": "image",
                      }
                    }
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "width": 8,
                    }
                  }
                />
                <View
                  dataSet={{}}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "flex": 1.7,
                      }
                    }
                  >
                    <Text
                      dataSet={{}}
                      numberOfLines={1}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "700",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                          "width": "100%",
                        }
                      }
                    >
                      Product item 3
                    </Text>
                    <View
                      dataSet={{}}
                      style={{}}
                    />
                    <Text
                      accessibilityLabel="product date"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 10,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 15,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      07 de diciembre , 2022
                    </Text>
                  </View>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      accessibilityLabel="product points"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#16a34a",
                            "fontFamily": undefined,
                            "fontSize": 16,
                            "fontStyle": undefined,
                            "fontWeight": undefined,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        + 
                      </Text>
                      200.00
                    </Text>
                    <View
                      dataSet={{}}
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <SvgMock
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityLabel="pressable item"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              dataSet={{}}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 6,
                        "height": 50,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <FastImageView
                    dataSet={{}}
                    defaultSource={null}
                    resizeMode="cover"
                    source={
                      {
                        "uri": "image",
                      }
                    }
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "width": 8,
                    }
                  }
                />
                <View
                  dataSet={{}}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "flex": 1.7,
                      }
                    }
                  >
                    <Text
                      dataSet={{}}
                      numberOfLines={1}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "700",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                          "width": "100%",
                        }
                      }
                    >
                      Product item 4
                    </Text>
                    <View
                      dataSet={{}}
                      style={{}}
                    />
                    <Text
                      accessibilityLabel="product date"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 10,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 15,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      06 de diciembre , 2022
                    </Text>
                  </View>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      accessibilityLabel="product points"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 16,
                            "fontStyle": undefined,
                            "fontWeight": undefined,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        - 
                      </Text>
                      100.00
                    </Text>
                    <View
                      dataSet={{}}
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <SvgMock
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      dataSet={{}}
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="accumulated cta"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        colorScheme="primary"
        dataSet={{}}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#334FFA",
            "borderRadius": 8,
            "elevation": 5,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 10,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 10,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          }
        }
      >
        <View
          dataSet={{}}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
          test={true}
        >
          <View
            dataSet={{}}
            style={{}}
          >
            <Text
              dataSet={{}}
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#FFFFFF",
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "letterSpacing": 0,
                  "lineHeight": 21,
                  "textDecorationLine": undefined,
                }
              }
            >
              Ganados
            </Text>
          </View>
        </View>
      </View>
      <View
        dataSet={{}}
        style={
          {
            "width": 16,
          }
        }
      />
      <View
        accessibilityLabel="redeemed cta"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        colorScheme="primary"
        dataSet={{}}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#334FFA",
            "borderRadius": 8,
            "elevation": 5,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 10,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 10,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          }
        }
      >
        <View
          dataSet={{}}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
          test={true}
        >
          <View
            dataSet={{}}
            style={{}}
          >
            <Text
              dataSet={{}}
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#FFFFFF",
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "letterSpacing": 0,
                  "lineHeight": 21,
                  "textDecorationLine": undefined,
                }
              }
            >
              Canjeados
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Dashboard /> updates the list with only accumulated products 1`] = `
<View
  dataSet={{}}
  style={
    {
      "flex": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    dataSet={{}}
    style={{}}
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#171717",
          "fontFamily": undefined,
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 27,
          "textDecorationLine": undefined,
        }
      }
    >
      Bienvenido de vuelta!
    </Text>
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#171717",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 21,
          "textDecorationLine": undefined,
        }
      }
    >
      Fernando Cornejo
    </Text>
  </View>
  <View
    dataSet={{}}
    style={
      {
        "marginBottom": 24,
        "marginTop": 24,
      }
    }
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#71717a",
          "fontFamily": undefined,
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 18,
          "marginBottom": 16,
          "textDecorationLine": undefined,
        }
      }
    >
      TUS PUNTOS
    </Text>
    <View
      dataSet={{}}
      style={
        {
          "backgroundColor": "#334FFA",
          "borderRadius": 16,
          "elevation": 5,
          "marginLeft": "auto",
          "marginRight": "auto",
          "paddingBottom": 48,
          "paddingTop": 48,
          "position": "relative",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 3.84,
          "width": "80%",
        }
      }
    >
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#FFFFFF",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "left": 16,
            "letterSpacing": 0,
            "lineHeight": 21,
            "position": "absolute",
            "textDecorationLine": undefined,
            "top": 16,
          }
        }
      >
        Diciembre
      </Text>
      <Text
        accessibilityLabel="points container"
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#FFFFFF",
            "fontFamily": undefined,
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 36,
            "marginLeft": "auto",
            "marginRight": "auto",
            "textDecorationLine": undefined,
          }
        }
      >
        300.00
         pts
      </Text>
    </View>
  </View>
  <View
    dataSet={{}}
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#71717a",
          "fontFamily": undefined,
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 18,
          "marginBottom": 16,
          "textDecorationLine": undefined,
        }
      }
    >
      TUS MOVIMIENTOS
    </Text>
    <View
      dataSet={{}}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "flex": 1,
          "marginBottom": 16,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <RCTScrollView
        data={
          [
            {
              "createdAt": "2022-12-09T10:20:00.909Z",
              "id": "1",
              "image": "image",
              "is_redemption": false,
              "points": 100,
              "product": "Product item 1",
            },
            {
              "createdAt": "2022-12-07T10:20:00.909Z",
              "id": "3",
              "image": "image",
              "is_redemption": false,
              "points": 200,
              "product": "Product item 3",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={true}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={[]}
        viewabilityConfigCallbackPairs={[]}
      >
        <View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityLabel="pressable item"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              dataSet={{}}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 6,
                        "height": 50,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <FastImageView
                    dataSet={{}}
                    defaultSource={null}
                    resizeMode="cover"
                    source={
                      {
                        "uri": "image",
                      }
                    }
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "width": 8,
                    }
                  }
                />
                <View
                  dataSet={{}}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "flex": 1.7,
                      }
                    }
                  >
                    <Text
                      dataSet={{}}
                      numberOfLines={1}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "700",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                          "width": "100%",
                        }
                      }
                    >
                      Product item 1
                    </Text>
                    <View
                      dataSet={{}}
                      style={{}}
                    />
                    <Text
                      accessibilityLabel="product date"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 10,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 15,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      09 de diciembre , 2022
                    </Text>
                  </View>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      accessibilityLabel="product points"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#16a34a",
                            "fontFamily": undefined,
                            "fontSize": 16,
                            "fontStyle": undefined,
                            "fontWeight": undefined,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        + 
                      </Text>
                      100.00
                    </Text>
                    <View
                      dataSet={{}}
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <SvgMock
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityLabel="pressable item"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              dataSet={{}}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 6,
                        "height": 50,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <FastImageView
                    dataSet={{}}
                    defaultSource={null}
                    resizeMode="cover"
                    source={
                      {
                        "uri": "image",
                      }
                    }
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "width": 8,
                    }
                  }
                />
                <View
                  dataSet={{}}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "flex": 1.7,
                      }
                    }
                  >
                    <Text
                      dataSet={{}}
                      numberOfLines={1}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "700",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                          "width": "100%",
                        }
                      }
                    >
                      Product item 3
                    </Text>
                    <View
                      dataSet={{}}
                      style={{}}
                    />
                    <Text
                      accessibilityLabel="product date"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 10,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 15,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      07 de diciembre , 2022
                    </Text>
                  </View>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      accessibilityLabel="product points"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#16a34a",
                            "fontFamily": undefined,
                            "fontSize": 16,
                            "fontStyle": undefined,
                            "fontWeight": undefined,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        + 
                      </Text>
                      200.00
                    </Text>
                    <View
                      dataSet={{}}
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <SvgMock
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      dataSet={{}}
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="all cta"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        colorScheme="primary"
        dataSet={{}}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#334FFA",
            "borderRadius": 8,
            "elevation": 5,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 10,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 10,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          }
        }
      >
        <View
          dataSet={{}}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
          test={true}
        >
          <View
            dataSet={{}}
            style={{}}
          >
            <Text
              dataSet={{}}
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#FFFFFF",
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "letterSpacing": 0,
                  "lineHeight": 21,
                  "textDecorationLine": undefined,
                }
              }
            >
              Todos
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Dashboard /> updates the list with only redeemed products 1`] = `
<View
  dataSet={{}}
  style={
    {
      "flex": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    dataSet={{}}
    style={{}}
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#171717",
          "fontFamily": undefined,
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 27,
          "textDecorationLine": undefined,
        }
      }
    >
      Bienvenido de vuelta!
    </Text>
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#171717",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 21,
          "textDecorationLine": undefined,
        }
      }
    >
      Fernando Cornejo
    </Text>
  </View>
  <View
    dataSet={{}}
    style={
      {
        "marginBottom": 24,
        "marginTop": 24,
      }
    }
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#71717a",
          "fontFamily": undefined,
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 18,
          "marginBottom": 16,
          "textDecorationLine": undefined,
        }
      }
    >
      TUS PUNTOS
    </Text>
    <View
      dataSet={{}}
      style={
        {
          "backgroundColor": "#334FFA",
          "borderRadius": 16,
          "elevation": 5,
          "marginLeft": "auto",
          "marginRight": "auto",
          "paddingBottom": 48,
          "paddingTop": 48,
          "position": "relative",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 3.84,
          "width": "80%",
        }
      }
    >
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#FFFFFF",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "700",
            "left": 16,
            "letterSpacing": 0,
            "lineHeight": 21,
            "position": "absolute",
            "textDecorationLine": undefined,
            "top": 16,
          }
        }
      >
        Diciembre
      </Text>
      <Text
        accessibilityLabel="points container"
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#FFFFFF",
            "fontFamily": undefined,
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 36,
            "marginLeft": "auto",
            "marginRight": "auto",
            "textDecorationLine": undefined,
          }
        }
      >
        -150.00
         pts
      </Text>
    </View>
  </View>
  <View
    dataSet={{}}
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      dataSet={{}}
      style={
        {
          "backgroundColor": undefined,
          "color": "#71717a",
          "fontFamily": undefined,
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "letterSpacing": 0,
          "lineHeight": 18,
          "marginBottom": 16,
          "textDecorationLine": undefined,
        }
      }
    >
      TUS MOVIMIENTOS
    </Text>
    <View
      dataSet={{}}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "flex": 1,
          "marginBottom": 16,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <RCTScrollView
        data={
          [
            {
              "createdAt": "2022-12-08T10:20:00.909Z",
              "id": "2",
              "image": "image",
              "is_redemption": true,
              "points": 50,
              "product": "Product item 2",
            },
            {
              "createdAt": "2022-12-06T10:20:00.909Z",
              "id": "4",
              "image": "image",
              "is_redemption": true,
              "points": 100,
              "product": "Product item 4",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={true}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={[]}
        viewabilityConfigCallbackPairs={[]}
      >
        <View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityLabel="pressable item"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              dataSet={{}}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 6,
                        "height": 50,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <FastImageView
                    dataSet={{}}
                    defaultSource={null}
                    resizeMode="cover"
                    source={
                      {
                        "uri": "image",
                      }
                    }
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "width": 8,
                    }
                  }
                />
                <View
                  dataSet={{}}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "flex": 1.7,
                      }
                    }
                  >
                    <Text
                      dataSet={{}}
                      numberOfLines={1}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "700",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                          "width": "100%",
                        }
                      }
                    >
                      Product item 2
                    </Text>
                    <View
                      dataSet={{}}
                      style={{}}
                    />
                    <Text
                      accessibilityLabel="product date"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 10,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 15,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      08 de diciembre , 2022
                    </Text>
                  </View>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      accessibilityLabel="product points"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 16,
                            "fontStyle": undefined,
                            "fontWeight": undefined,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        - 
                      </Text>
                      50.00
                    </Text>
                    <View
                      dataSet={{}}
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <SvgMock
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityLabel="pressable item"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              dataSet={{}}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      {
                        "borderRadius": 6,
                        "height": 50,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <FastImageView
                    dataSet={{}}
                    defaultSource={null}
                    resizeMode="cover"
                    source={
                      {
                        "uri": "image",
                      }
                    }
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "width": 8,
                    }
                  }
                />
                <View
                  dataSet={{}}
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "flex": 1.7,
                      }
                    }
                  >
                    <Text
                      dataSet={{}}
                      numberOfLines={1}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "700",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                          "width": "100%",
                        }
                      }
                    >
                      Product item 4
                    </Text>
                    <View
                      dataSet={{}}
                      style={{}}
                    />
                    <Text
                      accessibilityLabel="product date"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 10,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 15,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      06 de diciembre , 2022
                    </Text>
                  </View>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      accessibilityLabel="product points"
                      dataSet={{}}
                      style={
                        {
                          "backgroundColor": undefined,
                          "color": "#171717",
                          "fontFamily": undefined,
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 21,
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 16,
                            "fontStyle": undefined,
                            "fontWeight": undefined,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        - 
                      </Text>
                      100.00
                    </Text>
                    <View
                      dataSet={{}}
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <SvgMock
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      dataSet={{}}
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="all cta"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        colorScheme="primary"
        dataSet={{}}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#334FFA",
            "borderRadius": 8,
            "elevation": 5,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 10,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 10,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          }
        }
      >
        <View
          dataSet={{}}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
          test={true}
        >
          <View
            dataSet={{}}
            style={{}}
          >
            <Text
              dataSet={{}}
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#FFFFFF",
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "letterSpacing": 0,
                  "lineHeight": 21,
                  "textDecorationLine": undefined,
                }
              }
            >
              Todos
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
